# Helipad-Detector

./: CMakeLists.txt  README.md  config.xml
HelipadDetector/: CMakeLists.txt  package.xml  package.xml~
HelipadDetector/launch/: HelipadDetector.launch  HelipadDetector.launch~
HelipadDetector/src/include/: HelipadDetector.h  HelipadDetector.h~
HelipadDetector/src/source/: HelipadDetector.cpp  HelipadDetectorNode.cpp  Settings.xml~
src/include/: HelipadDetector.h  HelipadDetector.h~
src/src/: HelipadDetector.cpp  Test.cpp
